CIでパーマネント領域不足になったので、明示的にMaxPermSizeを指定してみる.